[project]
name = "natprof-mcp"
version = "0.1.0"
description = "macOS native profiling + debugging (xctrace/atos/vmmap/leaks/lldb) over MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
natprof-mcp = "natprof_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/natprof_mcp"]
